@@ -1,6 +1,6 @@
 <driver id="driver/eplaser-jp">
   <name>eplaser-jp</name>
-  <url>http://www.avasys.jp/linux/index.html</url>
+  <url>http://download.ebz.epson.net/dsc/search/01/search/?OSC=LX</url>
   <thirdpartysupplied />
   <execution>
     <ghostscript />
@@ -140,6 +140,9 @@
     </printer>
     <printer>
       <id>printer/Epson-LP-M5000</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-LP-M5300</id>
     </printer>
     <printer>
       <id>printer/Epson-LP-M6000</id>
