@@ -546,6 +546,9 @@
           <printer>printer/Epson-LP-M5000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-M5300</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
