@@ -889,6 +889,9 @@
           <printer>printer/Epson-LP-M5000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-M5300</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
@@ -1011,6 +1014,9 @@
           <printer>printer/Epson-LP-M5000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-M5300</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
@@ -1127,6 +1133,9 @@
           <printer>printer/Epson-LP-M5000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-M5300</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
@@ -1241,6 +1250,9 @@
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-M5000</printer>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-M5300</printer>
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-M6000</printer>
