@@ -180,6 +180,11 @@
     </constraint>
     <constraint sense="true">
       <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-M5300</printer>
+      <arg_defval>ev/eplaser-jp-Model-lpm5300</arg_defval>
+    </constraint>
+    <constraint sense="true">
+      <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-M6000</printer>
       <arg_defval>ev/eplaser-jp-Model-lpm6000</arg_defval>
     </constraint>
@@ -836,6 +841,24 @@
         <constraint sense="true">
           <driver>eplaser-jp</driver>
           <printer>printer/Epson-LP-M5000</printer>
+        </constraint>
+      </constraints>
+    </enum_val>
+    <enum_val id="ev/eplaser-jp-Model-lpm5300">
+      <ev_longname>
+        <en>Epson LP-M5300</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>lpm5300</en>
+      </ev_shortname>
+      <ev_driverval>lp8500c</ev_driverval>
+      <constraints>
+        <constraint sense="false">
+          <driver>eplaser-jp</driver>
+        </constraint>
+        <constraint sense="true">
+          <driver>eplaser-jp</driver>
+          <printer>printer/Epson-LP-M5300</printer>
         </constraint>
       </constraints>
     </enum_val>
