@@ -1,0 +1,31 @@
+<printer id="printer/Epson-LP-M5300">
+  <make>Epson</make>
+  <model>LP-M5300</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.jp/products/offirio/mfp/lpm5300/</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <functionality>A</functionality>
+  <driver>eplaser-jp</driver>
+  <comments>
+    <en>
+      Large format (A3/11x17) colour laser printer&lt;p&gt;
+      Epson provides a free (LGPL) driver for this printer. With this the
+      printer works to its full extent.&lt;p&gt;
+      A scanning add-on for this printer is available, so that one can make
+      an multi-function device (printing, scanning, copying) out of it.&lt;p&gt;
+
+      Consumables/Refills: &lt;p&gt;
+    </en>
+  </comments>
+</printer>
