@@ -1,3 +1,7 @@
+2012-05-23  Seiko Epson Corporation <linux-printer@epson.jp>
+	* db/source/printer/Epson-LP-M5300.xml: Added a new printer.xml
+
+
 2012-03-08 David Williams <dwilliams@ricohsv.com>
         * db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_C3502_PS.ppd,
           db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_C3502_PXL.ppd,
